syntax = "proto3";
package generated;

import "google/protobuf/timestamp.proto";

option go_package = "/generated";



// Required data for administrator connection to a Seaside Whirlpool node
message SeasideWhirlpoolAdminCertificate {

    // Whirlpool node IP address
    string address = 1;

    // Whirlpool node gRPC port number
    uint32 port = 2;

    // gRPC connection server public key
    bytes server_certificate_public = 3;

    // gRPC connection client public key
    bytes client_certificate_public = 4;

    // gRPC connection client private key
    bytes client_certificate_key = 5;

    // gRPC connection certificate authority
    bytes certificate_authority = 6;

    // Administrator authentication token
    bytes token = 7;  // generated.AdminToken
}

// Required data for client connection to a Seaside Whirlpool node
message SeasideWhirlpoolClientCertificate {

    // Whirlpool node IP address
    string address = 1;

    // TYPHOON protocol public key
    bytes typhoon_public = 2;

    // TYPHOON protocol port number
    uint32 typhoon_port = 3;

    // PORT protocol port number
    uint32 port_port = 4;

    // User authentication token
    bytes token = 5;  // generated.ClientToken

    // Suggested DNS server to use
    string dns = 6;
}



// Seaside Whirlpool user token used for connection
message ClientToken {

    // User non-unique name
    string name = 1;

    // User unique identifier
    string identifier = 2;

    // Whether user is privileged
    bool is_privileged = 3;

    // User subscription end timestamp
    google.protobuf.Timestamp subscription = 4;
}

// Seaside Whirlpool administrator token used for connection
message AdminToken {

    // Administrator non-unique name
    string name = 1;

    // Whether administrator is owner
    bool is_owner = 2;
}
